# tex2any

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
archive/: site.css
components/: footer.css  footer.js  header.css  header.js  toc.css  toc.js  toggle.css  toggle.js
src/tex2any/: __init__.py  _version.py  cli.py  components.py  composer.py  config.py  converter.py  logging.py  resources.py  themes.py
src/tex2any/data/: __init__.py
src/tex2any/data/components/: __init__.py  annotations.css  annotations.js  back-to-top.css  back-to-top.js  bookmark-progress.css  bookmark-progress.js  citation-generator.css  citation-generator.js  collapsible-proofs.css  collapsible-proofs.js  copy-code.css  copy-code.js  cross-references.css  cross-references.js  document-stats.css  document-stats.js  equation-numbers.css  equation-numbers.js  floating-toc.css  floating-toc.js  footer.css  footer.js  glossary-tooltips.css  glossary-tooltips.js  header.css  header.js  hugo-frontmatter.css  hugo-frontmatter.js  hugo-shortcodes.css  hugo-shortcodes.js  math-preview.css  math-preview.js  reading-progress.css  reading-progress.js  reading-time.css  reading-time.js  search.css  search.js  seo-meta.css  (+11 more)
src/tex2any/data/themes/: __init__.py  academic.css  clean.css  dark.css  floating-toc.css  minimal.css  modern.css  serif.css  toggle.css  toggle.js
tests/: __init__.py  test_components.py  test_composer.py  test_converter.py  test_logging.py  test_resources.py  test_themes.py
themes/: academic.css  dark.css  minimal.css  serif.css
